--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  @if(!finishedAuthCheck()){
+    <ion-loading message="Loading..." spinner="circles"/>
+  }@else{
+    <ion-router-outlet></ion-router-outlet>
+  }
 </ion-app>
